--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ out/
 
 ### VS Code ###
 .vscode/
+
+# Spring Boot application.properties 파일 무시
+application.properties
+
+# 환경 설정 파일 (.env) 무시
+.env
