--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-# ??? ?????? ??
+# ?????? ?? ??
 spring.application.name=api-server
 
-# ??? ?? ??
+# ?????? ??
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# ?????? URL ? ??? ??
+# ?????? URL ??
 # mysql://[DB URL]:[port]/[DB Name]?serverTimezone=UTC
 spring.datasource.url=jdbc:mysql://localhost:3306/homebar_db?useSSL=false&serverTimezone=Asia/Seoul
 # ?????? ??? ??
@@ -11,13 +11,12 @@ spring.datasource.username=root
 # ?????? ????
 spring.datasource.password=Gks90408934@
 
-# ?????? ??
-# ??? SQL ?? ??
+# JPA ??
+# ?? ? SQL ?? ??
 spring.jpa.properties.hibernate.show_sql=true
-# SQL ??? ?? ?? ???
+# SQL ?? ? ?? ??
 spring.jpa.properties.hibernate.format_sql=true
-# ??? ???? ???? ?????? ??? ?? ????
+# ?????? ?? ? ?????? ??? ?? ????
 spring.jpa.hibernate.ddl-auto=update
-# application.properties? ???? ??? ??? ? ????.
+# application.properties?? ??? ?? ????? ??
 spring.jpa.open-in-view=false
-
